--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         </div>
     </header>
     <main>
-        
 
         <section>
             <ul class="searched">
@@ -37,7 +36,7 @@
     </main>
     <footer>
         <h3>&copy 2023</h3>
-        <p>This App was created using the low carb recipe api from rapidapi.com</p>
+        <p>This App was created using the Recipe Search and Diet api from rapidapi.com</p>
     </footer>
 </body>
 </html>
